--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "@sweetalert2/theme-material-ui": "^5.0.27",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "sweetalert2": "^11.23.0",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -28,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "sass-embedded": "^1.93.2",
     "tailwindcss": "^4.1.14",
     "vite": "^7.1.7"
   }
